# StockInsight

./: .replit  README.md  main.py  pyproject.toml  replit.nix  utils.py
pages/: mutual_funds.py  portfolio.py
