[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <4"
dependencies = [
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pytz>=2025.1",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.54",
]
[tool.poetry]
package-mode = false
